--- a/css/ananti_sub.css
+++ b/css/ananti_sub.css
@@ -11,38 +11,126 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 .inner {max-width: 1700px; margin: 0 auto; padding: 0 5%;}
 
 /* 스크롤바 옵션*/
-::-webkit-scrollbar {
-    display: block;
-}
-::-webkit-scrollbar-track, ::-webkit-scrollbar-button {
-    display: none;
-}
-::-webkit-scrollbar-thumb {
-    background-color: var(--main-color);
-}
+::-webkit-scrollbar { width: 10px; display: block;}
+::-webkit-scrollbar-track { border-left: #282828 1px solid; }
+::-webkit-scrollbar-button { display: none;}
+::-webkit-scrollbar-thumb { background-color: var(--main-color);}
 
 /* #header */
-#header {border-bottom: var(--main-color) 1px solid; background: #fff; width: 100%;}
-#header .inner {max-width: 100%;}
-#header .inner .header_all {display: flex; justify-content: space-between;}
+#header {border-bottom: var(--main-color) 1px solid; background: #fff; width: 100%; position: fixed; top: 0;left: 0; z-index: 1000;}
+#header  {max-width: 100%;}
+#header .header_all {display: flex; justify-content: space-between; align-items: center;}
+#header .header_all .back a {display: flex; gap: 20px; align-items: center; padding: 15px 50px; border-right:#282828 1px solid;}
+#header .header_all .back a:hover {background: #282828;}
+#header .header_all .back a:hover .back_img {background: url(../img/9041642_arrow_left_icon_w.svg) no-repeat center / 100%; width: 40px; height: 40px;}
+#header .header_all .back a:hover .back_txt{color: #fff;}
+#header .header_all .back a .back_img {background: url(../img/9041642_arrow_left_icon.svg) no-repeat center / 100%; width: 40px; height: 40px;}
+#header .header_all .back a .back_txt {font-size: 2rem; font-family: var(--sub-font); color: #282828;}
+
+#header .header_all .top {display: flex; align-items: center; border-left: #282828 solid 1px; padding: 15px 50px;}
+#header .header_all a .top .gotop_img {background: url(../img/arrow-up-svgrepo-com.svg) no-repeat center / 100%; width: 40px; height: 40px;}
+#header .header_all .top:hover {background: #282828;}
+#header .header_all a .top:hover .gotop_img {background: url(../img/arrow-up-svgrepo-com_w.svg) no-repeat center / 100%; width: 40px; height: 40px;}
+
+@media (max-width : 1024px) {
+  #header .header_all .back a .back_txt {font-size: 1.8rem;}
+}
+
+@media (max-width :768px) {
+  #header .header_all .back a {gap: 15px;  padding: 10px 20px; }
+  #header .header_all .back a .back_img {width: 30px; height: 30px;}
+  #header .header_all .top {padding: 10px 20px;}
+  #header .header_all a .top .gotop_img { width: 30px; height: 30px;}
+}
+
+@media (max-width :425px) {
+  #header .header_all .back a {gap: 12px;  padding: 8px 18px; }
+  #header .header_all .back a .back_img {width: 25px; height: 25px;}
+  #header .header_all .top {padding: 8px 18px;}
+  #header .header_all a .top .gotop_img { width: 25px; height: 25px;}
+  #header .header_all .back a .back_txt {font-size: 1.6rem;}
+}
+
 
 /* footer */
 #footer {border-top: #282828 1px solid; }
-#footer .inner {max-width: 100%; padding: 30px 5%; display: flex; justify-content: space-between; align-items: center;}
+#footer .inner {max-width: 100%; padding: 50px 5%; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;}
 
 #footer .inner .footer_txt {font-family: var(--main-font);}
+#footer .inner .footer_txt p {padding-bottom: 15px;}
+
+#footer .inner .footer_txt .mobile-br {display: none;}
 
 #footer .inner .contact {text-align: right;}
 #footer .inner .contact .contactus {padding-bottom: 20px; font-weight: 600; font-family: var(--sub-font);}
 #footer .inner .contact p {font-family: var(--sub-font);}
 
+@media (max-width :768px) {
+#footer .inner .footer_txt {width: 100%;}
+#footer .inner .contact {text-align: left; order: -1; padding-bottom: 10px; display: flex; }
+#footer .inner .contact .contactus {padding-right: 30px;}
+#footer .inner .contact .num {display: flex; gap: 20px; flex-wrap: wrap;}
+}
+
+@media (max-width :425px){
+#footer .inner .contact {padding-bottom: 30px; font-size: 1.4rem; justify-content: space-between; flex-direction: row; display: flex; width: 100%;}
+#footer .inner .contact .num {display: block; text-align: right;}
+#footer .inner .footer_txt {font-size: 1.4rem;}
+#footer .inner .footer_txt .footer_txt1 {display: none;}
+#footer .inner .footer_txt .mobile-br {display: block;}
+}
 
 /* gotop */
 .gotop {color: var(--main-color); font-size: 50px; font-weight: 900;}
 
 
 /* container */
+#container .inner {max-width: 100%;}
+#container .inner .container_txt {margin-top: 150px; display: flex; justify-content: space-between; flex-wrap:wrap ;}
+#container .inner .container_txt .left h4 {font-size: 5.5rem; color: var(--main-color);}
+#container .inner .container_txt .left p {font-size: 3.5rem; color: var(--main-color);}
 
-#container .inner .container_txt {margin-top: 150px;}
-#container .inner .container_txt .left {font-size: 6rem; color: var(--main-color);}
-#container .inner .container_img img {width: 100%; margin: 200px 0;}
+#container .inner .container_txt .right {display: flex; font-size: 1.8rem;}
+#container .inner .container_txt .right li {padding-bottom: 40px;}
+#container .inner .container_txt .right .sub_title {font-weight: 500; padding-bottom: 5px;}
+#container .inner .container_txt .right .sub_ex {padding-left: 15px;}
+#container .inner .container_txt .right .txt_1 {margin-right: 100px;}
+#container .inner .container_txt .right .txt_2 {margin-right: 50px;}
+#container .inner .container_txt .right .txt_2 img{width: 15px;}
+#container .inner .container_txt .right .txt_2 li > .sub_ex_link a {text-decoration: underline;}
+#container .inner .container_img {display: flex; justify-content: center; align-items: center;  width: 100%;  padding: 200px 20px;  box-sizing: border-box;}
+#container .inner .container_img img {width: 100%;  max-width: 90%;  height: auto;  object-fit: contain;}
+
+
+@media (max-width : 1440px) {
+  #container .inner .container_img {padding: 100px 20px;}
+  #container .inner .container_txt .left {width:100%; padding-bottom: 100px;}
+  #container .inner .container_txt .right {gap: 100px;}
+}
+
+@media (max-width : 1024px) {
+  #container .inner .container_txt .left {width:100%; padding-bottom: 100px;}
+  #container .inner .container_txt .left h4 {font-size: 4rem;}
+  #container .inner .container_txt .left p {font-size: 3rem;}
+  #container .inner .container_txt .right {gap: 50px;}
+}
+
+@media (max-width : 768px) {
+  #container .inner .container_img {padding: 50px 20px;}
+  #container .inner .container_txt .left {padding-bottom: 80px;}
+  #container .inner .container_txt {display: block;}
+  #container .inner .container_txt .left h4 {font-size: 3.5rem;}
+  #container .inner .container_txt .left p {font-size: 2.5rem;}
+  #container .inner .container_txt .right {display: block; font-size: 1.6rem;}
+  #container .inner .container_txt .right .txt_1 {display: flex; justify-content: space-between; flex-wrap: wrap;}
+  #container .inner .container_txt .right .txt_2 {padding-top: 30px;}
+}
+
+@media (max-width : 425px) {
+  #container .inner .container_txt .left {padding-bottom: 30px;}
+  #container .inner .container_txt .left h4 {font-size: 3rem;}
+  #container .inner .container_txt .left p {font-size: 2rem;}
+  #container .inner .container_txt .right { flex-direction: column;  display: flex; font-size: 1.4rem; gap: 0;}
+  #container .inner .container_txt .right .txt_1 {width: calc(100% / 3);}
+  #container .inner .container_txt .right .txt_2 {order: -1;}
+}
