--- a/css/berry.css
+++ b/css/berry.css
@@ -32,7 +32,6 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #header .header_all .top:hover {background: #282828;}
 #header .header_all a .top:hover .gotop_img {background: url(../img/arrow-up-svgrepo-com_w.svg) no-repeat center / 100%; width: 40px; height: 40px;}
 
-
 @media (max-width : 1024px) {
   #header .header_all .back a .back_txt {font-size: 1.8rem;}
 }
@@ -51,6 +50,9 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
   #header .header_all a .top .gotop_img { width: 25px; height: 25px;}
   #header .header_all .back a .back_txt {font-size: 1.6rem;}
 }
+
+
+
 
 /* footer */
 #footer {border-top: #282828 1px solid; }
@@ -80,7 +82,6 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #footer .inner .footer_txt .mobile-br {display: block;}
 }
 
-
 /* gotop */
 .gotop {color: var(--main-color); font-size: 50px; font-weight: 900;}
 
@@ -99,12 +100,10 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #container .inner .container_txt .right .txt_2 {margin-right: 50px;}
 #container .inner .container_txt .right .txt_2 img{width: 15px;}
 #container .inner .container_txt .right .txt_2 li > .sub_ex_link a {text-decoration: underline;}
-#container .inner .container_img {display: flex; justify-content: center; align-items: center;  width: 100%;  padding: 200px 20px;  box-sizing: border-box;}
-#container .inner .container_img img {width: 100%;  max-width: 90%;  height: auto;  object-fit: contain;}
-
+#container .inner .container_img { display: flex; justify-content: center;  align-items: center;  gap: 20px;  padding: 200px 50px;  width:100%;  box-sizing: border-box; }
+#container .inner .container_img img {width: 100%; max-width: 90%; height: auto; object-fit: contain;} 
 
 @media (max-width : 1440px) {
-  #container .inner .container_img {padding: 100px 20px;}
   #container .inner .container_txt .left {width:100%; padding-bottom: 100px;}
   #container .inner .container_txt .right {gap: 100px;}
 }
@@ -114,10 +113,11 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
   #container .inner .container_txt .left h4 {font-size: 4rem;}
   #container .inner .container_txt .left p {font-size: 3rem;}
   #container .inner .container_txt .right {gap: 50px;}
+  #container .inner .container_img { flex-direction: column; align-items: center; width: 100%;  padding: 100px 50px;}
+  #container .inner .container_img img {max-width: 100%;}
 }
 
 @media (max-width : 768px) {
-  #container .inner .container_img {padding: 50px 20px;}
   #container .inner .container_txt .left {padding-bottom: 80px;}
   #container .inner .container_txt {display: block;}
   #container .inner .container_txt .left h4 {font-size: 3.5rem;}
@@ -125,6 +125,7 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
   #container .inner .container_txt .right {display: block; font-size: 1.6rem;}
   #container .inner .container_txt .right .txt_1 {display: flex; justify-content: space-between; flex-wrap: wrap;}
   #container .inner .container_txt .right .txt_2 {padding-top: 30px;}
+  #container .inner .container_img { padding: 50px 25px;}
 }
 
 @media (max-width : 425px) {
@@ -134,4 +135,5 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
   #container .inner .container_txt .right { flex-direction: column;  display: flex; font-size: 1.4rem; gap: 0;}
   #container .inner .container_txt .right .txt_1 {width: calc(100% / 3);}
   #container .inner .container_txt .right .txt_2 {order: -1;}
+  #container .inner .container_img img { margin: 50px 0;}
 }
