--- a/css/main.css
+++ b/css/main.css
@@ -11,34 +11,66 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 .inner {max-width: 1700px; margin: 0 auto; padding: 0 5%;}
 
 /* 스크롤바 옵션*/
-::-webkit-scrollbar {
-    display: block;
-}
-::-webkit-scrollbar-track, ::-webkit-scrollbar-button {
-    display: none;
-}
-::-webkit-scrollbar-thumb {
-    background-color: var(--main-color);
-}
+::-webkit-scrollbar { width: 10px; display: block;}
+::-webkit-scrollbar-track { border-left: #282828 1px solid; }
+::-webkit-scrollbar-button { display: none;}
+::-webkit-scrollbar-thumb { background-color: var(--main-color);}
 
 
 
 /* #header */
+#header {border-bottom: #282828 1px solid; }
 #header .inner {max-width: 100%; display: flex; justify-content: space-between; align-items: center;}
 #header h1 a {display: block; width: 70px; height: 100px; background: url('../img/Asset\ 1@100x.png') no-repeat center / 100%; font-size: 0;}
 #header .inner ul {display: flex; gap: 50px;}
 #header .inner ul li a {font-family: var(--sub-font);}
 #header .inner .util p a {font-family: var(--sub-font);}
 
+@media (max-width : 1024px) {
+#header .inner ul {display: none; }
+}
+
+
 /* section_1 */
-#home .inner {max-width: 100%;}
-#home  .inner {text-align: center; padding: 100px 0;}
-#home  .inner h2 {font-size: 13rem;}
-#home  .inner .line_1 {display: flex; justify-content: center;}
-#home  .inner .line_2 {display: flex; justify-content: center;}
-#home  .inner .line_2 .point {background:var(--main-color);}
-#home  .inner p {font-size: 13rem; color: #fff; width: 175px; height: 175px; border-radius: 50%; text-align: center; margin: 0 40px;}
-#home  .inner .line_3 {display: flex; gap: 40px; justify-content: center;}
+#home .inner {max-width: 100%; margin-bottom: 200px; }
+#home .inner p {font-size: 12rem; font-weight: 900; }
+#home .inner .tag_1 {display: flex;  gap: 50px; margin-top: 100px;}
+#home .inner .tag_1 .point_1 {font-weight: 400;}
+
+#home .inner .tag_2 {display: flex; gap: 50px; align-items: center;}
+#home .inner .tag_2 .smile_icon {background: url(../img/emoji-smile-svgrepo-com.svg) no-repeat center; background-size: contain; width: 100px; height: 100px;}
+
+#home .inner .tag_3 {display: flex; margin-top: 400px; gap: 50px; justify-content: right;}
+
+#home .inner .tag_4 {display: flex;  gap: 50px; justify-content: right; }
+
+@media (max-width : 1440px) {
+#home .inner p {font-size: 10rem; font-weight: 900; }
+#home .inner .tag_3 {display: flex; margin-top: 200px; gap: 50px; justify-content: right;}
+}
+
+@media (max-width : 1024px) {
+#home .inner p {font-size: 8rem; font-weight: 900; }
+#home .inner .tag_3 {display: flex; margin-top: 200px; gap: 50px; justify-content: left;}
+#home .inner .tag_4 {display: flex;  gap: 50px; justify-content: left; }
+}
+
+@media (max-width : 768px) {
+#home .inner p {font-size: 6rem; font-weight: 900; }
+
+#home .inner .tag_2 .smile_icon {background: url(../img/emoji-smile-svgrepo-com.svg) no-repeat center; background-size: contain; width: 70px; height: 70px;}
+}
+
+
+@media (max-width : 425px) {
+#home .inner p {font-size: 5rem; font-weight: 900; }
+#home .inner .tag_1 {display: flex;  gap: 10px; margin-top: 100px;}
+#home .inner .tag_2 {display: flex; gap: 10px; align-items: center;}
+#home .inner .tag_3 {display: flex; margin-top: 100px; gap: 10px; justify-content: left;}
+#home .inner .tag_4 {display: flex;  gap: 10px; justify-content: right; }
+}
+
+
 
 /* section_2 */
 #about {margin-bottom: 200px;}
@@ -46,7 +78,8 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #about .inner h2 {color: var(--main-color); font-size: 6rem; font-family: var(--sub-font); margin-bottom: 100px;}
 
 #about .inner .profile {display: flex; gap: 200px;}
-#about .inner .profile .profile_left p {font-size: 2.4rem; padding-top: 100px;}
+#about .inner .profile .profile_left p {font-size: 2rem; padding-top: 100px;}
+#about .inner .profile .profile_left img {width: 100%;}
 #about .inner .profile .profile_right {width: calc(100% - 200px);}
 #about .inner .profile .profile_right h3 {font-size: 2rem; padding-bottom: 50px; color: var(--sub-color);}
 #about .inner .profile .profile_right .skill_bar {display: flex; justify-content: space-between; align-items: center; padding-bottom: 50px;}
@@ -59,16 +92,26 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 
 /* section3 */
 #web-project {margin-bottom: 200px;}
-#web-project .inner {max-width: 100%; display: flex; justify-content: space-between;}
-#web-project .inner .web_left {position: sticky; top: 100px; height: 500px;}
-#web-project .inner .web_left h2 {font-size: 6rem; color: var(--main-color); font-family: var(--sub-font);}
-#web-project .inner h4 {font-size: 3.5rem; font-family: var(--sub-font);}
-#web-project .inner p {font-size: 2.2rem; font-family: var(--main-font);}
-#web-project .web_txt {padding: 20px 0 20px 10px;}
-#web-project .inner .web_right ul {display: flex;  gap: 50px; flex-wrap: wrap; justify-content: right; width: 1000px;}
-#web-project .inner .web_right ul li {width: calc((100% - 50px) / 2); padding-top: 150px;}
-#web-project .inner .web_right ul li .web_img img {width: 100%;}
+#web-project .inner {max-width: 100%;}
+#web-project .inner h2 {color: var(--main-color); font-size: 6rem; font-family: var(--sub-font); margin-bottom: 100px;}
+#web-project .inner .project {position: relative;display: flex;justify-content: space-around; align-items: flex-start; padding-top: 100px;}
+#web-project .inner .num { width: 25%; font-size: 30rem; font-weight: 900; color: transparent; -webkit-text-stroke: 1px #282828; position: sticky; top: 100px;transition: .5s ease-in-out;}
+#web-project .inner .project.active .num {color: #282828}
+#web-project .inner .pro_cont {width: 60%; margin: 50px 0;}
+#web-project .inner .pro_cont figure {width: 100%; height: 1030px; }
+#web-project .inner .pro_cont figure img {display: block; width: 100%; height: 100%; object-fit: cover; } 
+#web-project .inner .pro_desc {margin-top: 20px; display: flex; justify-content: space-between; align-items: center;}
+#web-project .inner .pro_desc h4 {font-size: 5rem; font-weight: 600; }
+#web-project .inner .pro_desc p {font-size: 2.2rem; font-weight: 400; }
 
+@media (max-width : 1024px) {
+#web-project .inner .num { width: 25%; font-size: 20rem; font-weight: 900; color: transparent; -webkit-text-stroke: 1px #282828; position: sticky; top: 100px;transition: .5s ease-in-out;}
+#web-project .inner .pro_cont figure img {display: block; width: 100%; height: auto; } 
+}
+
+@media (max-width : 768px) {
+  #web-project .inner .num {display: none;}
+}
 
 
 
@@ -87,12 +130,11 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 
 
 
-
-
 /* footer */
 #footer {border-top: #282828 1px solid; }
 #footer .inner {max-width: 100%; padding: 50px 5%; display: flex; justify-content: space-between;}
-
+#footer .inner .footer_txt p {padding-bottom: 10px;}
 
 /* gotop */
-.gotop {color: var(--main-color); font-size: 50px; font-weight: 900;}
+#footer .inner .gotop {display: flex; align-items: center; justify-content: center; height: 100%;}
+#footer .inner .gotop .gotop_img { background: url(../img/arrow-up-svgrepo-com.svg) no-repeat center center; width: 70px; height: 70px; background-size: contain;}
