--- a/css/web.css
+++ b/css/web.css
@@ -32,7 +32,6 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #header .header_all .top:hover {background: #282828;}
 #header .header_all a .top:hover .gotop_img {background: url(../img/arrow-up-svgrepo-com_w.svg) no-repeat center / 100%; width: 40px; height: 40px;}
 
-
 @media (max-width : 1024px) {
   #header .header_all .back a .back_txt {font-size: 1.8rem;}
 }
@@ -81,6 +80,7 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 }
 
 
+
 /* gotop */
 .gotop {color: var(--main-color); font-size: 50px; font-weight: 900;}
 
@@ -91,6 +91,8 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #container .inner .container_txt .left h4 {font-size: 5.5rem; color: var(--main-color);}
 #container .inner .container_txt .left p {font-size: 3.5rem; color: var(--main-color);}
 
+#container .inner .mobile-br {display: none;}
+
 #container .inner .container_txt .right {display: flex; font-size: 1.8rem;}
 #container .inner .container_txt .right li {padding-bottom: 40px;}
 #container .inner .container_txt .right .sub_title {font-weight: 500; padding-bottom: 5px;}
@@ -99,9 +101,12 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 #container .inner .container_txt .right .txt_2 {margin-right: 50px;}
 #container .inner .container_txt .right .txt_2 img{width: 15px;}
 #container .inner .container_txt .right .txt_2 li > .sub_ex_link a {text-decoration: underline;}
-#container .inner .container_img {display: flex; justify-content: center; align-items: center;  width: 100%;  padding: 200px 20px;  box-sizing: border-box;}
-#container .inner .container_img img {width: 100%;  max-width: 90%;  height: auto;  object-fit: contain;}
 
+#container .inner .concept { padding:200px 0 50px;}
+#container .inner .concept .banner_section { display: flex; justify-content: center; padding-bottom: 150px; }
+#container .inner .concept .container_img {display: flex; flex-direction: column;  align-items: center;}
+#container .inner .concept .container_img img { width: 100%; height: auto; }
+#container .inner .concept  .container_img h3 { align-self: flex-start;  margin-bottom: 50px;  text-align: left; font-family: var(--main-font); font-size: 4.5rem;}
 
 @media (max-width : 1440px) {
   #container .inner .container_img {padding: 100px 20px;}
@@ -128,6 +133,9 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
 }
 
 @media (max-width : 425px) {
+  #container .inner .concept .container_img h3 {font-size: 2.5rem; padding: 50px 0 20px;}
+  #container .inner .concept .banner_section { display: flex; justify-content: center; padding-bottom: 50px; }
+  #container .inner .mobile-br {display: block;}
   #container .inner .container_txt .left {padding-bottom: 30px;}
   #container .inner .container_txt .left h4 {font-size: 3rem;}
   #container .inner .container_txt .left p {font-size: 2rem;}
@@ -135,3 +143,4 @@ body {font-size: 1.6rem; font-family: "Poppins", 'Pretendard-Regular', serif; co
   #container .inner .container_txt .right .txt_1 {width: calc(100% / 3);}
   #container .inner .container_txt .right .txt_2 {order: -1;}
 }
+
